[workspace]
members = [
    "calpol-cli",
    "calpol-model",
    "messagebird",
]
resolver = "2"

[package]
name = "calpol"
version = "0.1.0"
edition = "2018"
authors = ["Jacob Halsey <jacob@jhalsey.com>"]
description = "Multi-Service health monitor"

[dependencies]
actix-extensible-rate-limit = "0.2.1"
actix-web = "4.0.1"
actix-web-httpauth = "0.6.0"
actix-web-validator = "3.0.0"
anyhow = "1.0.52"
async-trait = "0.1.52"
base64 = "0.13.0"
bcrypt = "0.10"
bincode = "1.3.3"
calpol-model = { path = "./calpol-model", features = ["validation"] }
chrono = "0.4"
clap = { version = "=3.0.0-rc.8", features = ["derive", "env"] }
config = { version = "0.11", features = ["toml"] }
derive-new = "0.5"
diesel = { version = "1.4.8", features = ["postgres", "r2d2", "chrono", "serde_json"] }
diesel-postgres = { git = "https://github.com/jacob-pro/diesel-postgres", rev = "a73ad0b" }
diesel-repository = { git = "https://github.com/jacob-pro/diesel-repository.git", rev = "058c63b" }
diesel_migrations = "1.4.0"
env_logger = "0.8.4"
futures = "0.3.21"
http = "0.2.6"
http-api-problem = { features = ["actix-web", "api-error"], git = "https://github.com/jacob-pro/http-api-problem" }
lettre = { version = "0.10.0-rc.5", features = ["pool", "serde", "tokio1", "tokio1-native-tls"] }
log = "0.4.14"
messagebird = { path = "./messagebird" }
native-tls = "0.2.8"
rand = "0.8.5"
reqwest = "0.11.8"
serde = "1.0"
serde_json = "1.0"
serde_plain = "1.0.0"
socket2 = "0.4.2"
thiserror = "1.0.30"
tokio = { version = "1.15.0", features = ["rt-multi-thread"] }
trust-dns-resolver = "0.20.3"
twilio = "1.0.0"
url = { version = "2.2.2", features = ["serde"] }
validator = { version = "0.14.0", features = ["derive"] }
x509-parser = "0.12.0"
