[package]
name = "calpol-cli"
version = "0.1.0"
edition = "2021"
authors = ["Jacob Halsey <jacob@jhalsey.com>"]
description = "Client for the Calpol API"

[dependencies]
calpol-model = { path = "../calpol-model", default-features = false }
clap = { version = "=3.0.0-rc.8", features = ["derive"] }
derive-new = "0.5.9"
dialoguer = "0.9.0"
dirs = "4.0"
http-api-problem = "0.51.0"
lazy_static = "1.4.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0.30"
url = { version = "2.2.2", features = ["serde"] }
