[package]
name = "calpol-model"
version = "0.1.0"
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lettre = { version = "0.10.0-rc.4", features = ["serde"], optional = true }
serde = "1.0"
serde_json = "1.0"
url = { version = "2.2.2", features = ["serde"] }
validator = { version = "0.12", features = ["derive", "phone"], optional = true }

[features]
validation = ["lettre", "validator"]
default = ["validation"]
