[package]
name = "messagebird"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.10", features = ["json"] }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.30"
tokio = { version = "0.2" }


