[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
sea-orm-migration = { version = "0.9.3", features = ["sqlx-postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1.15.0", features = ["rt-multi-thread", "macros"] }
